# fundingrate

./: .gitignore  CMakeLists.txt  README.md  compare_outputs  monitor_logs  run
.github/workflows/: build_and_test.yml  code_quality.yml  multi_platform.yml
config/: bot_config.json.example
data/: performance.json.example
include/config/: config_manager.h
include/core/: funding_bot.h
include/exchange/: exchange_config.h  exchange_interface.h  types.h  websocket_client.h
include/risk/: risk_manager.h
include/strategy/: arbitrage_strategy.h  composite_strategy.h  strategy_factory.h
src/: main.cpp
src/config/: config_manager.cpp
src/core/: funding_bot.cpp
src/exchange/: binance_exchange.cpp  bitget_exchange.cpp  bybit_exchange.cpp  kucoin_exchange.cpp  okx_exchange.cpp  websocket_client.cpp  websocket_client.h
src/risk/: risk_manager.cpp
src/strategy/: cross_exchange_perp_strategy.cpp  cross_exchange_spot_perp_strategy.cpp  same_exchange_spot_perp_strategy.cpp  strategy_factory.cpp
src/test/: websocket_test.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/exchange/: mock_exchange.h  test_exchange_config.cpp
tests/risk/: test_risk_manager.cpp
tests/strategy/: test_composite_strategy.cpp  test_same_exchange_spot_perp_strategy.cpp  test_strategy_factory.cpp
tests/utils/: test_config_manager.cpp  test_funding_rate_calculations.cpp
